--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<querydsl.version>5.0.0</querydsl.version>
+		<querydsl.version>6.0.0.RC1</querydsl.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
 	</properties>
 
@@ -31,10 +31,9 @@
 			<version>${jakarta.persistence-api.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.querydsl</groupId>
+			<groupId>io.github.openfeign.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
 			<version>${querydsl.version}</version>
-			<classifier>jakarta</classifier>
 		</dependency>
 
 		<dependency>
@@ -67,9 +66,9 @@
 					<showWarnings>true</showWarnings>
 					<annotationProcessorPaths>
 						<path>
-							<groupId>com.querydsl</groupId>
+							<groupId>io.github.openfeign.querydsl</groupId>
 							<artifactId>querydsl-apt</artifactId>
-							<classifier>jakarta</classifier>
+							<classifier>jpa</classifier>
 							<version>${querydsl.version}</version>
 						</path>
 						<path>
@@ -89,12 +88,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M9</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M9</version>
+				<version>3.2.5</version>
 			</plugin>
 		</plugins>
 	</build>
